# techblog-iamfax

dino-v2-visualization/: README.md  main.py  pyproject.toml
sam/: README.md  main.py  pyproject.toml  sam_engine.py  sam_test.py
sam/frontend/: index.html
strawberry-django/: Dockerfile_django  README.md  docker-compose.yml  pyproject.toml
strawberry-django/django/: db.sqlite3
strawberry-django/django/api/: models.py  schema.py  urls.py
strawberry-django/django/api/graphql/mutations/: mutations.py
strawberry-django/django/api/graphql/queries/: queries.py
strawberry-django/django/api/migrations/: 0001_initial.py
strawberry-django/django/backend/: settings.py
strawberry-django/src/imfaxblog/: __init__.py
