[project]
name = "dino2"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "xformers>=0.0.29.post3",
    "mypy>=1.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dino2"]

[[tool.mypy.overrides]]
module = ['gspread', 'mymodule', 'sklearn']
ignore_missing_imports = true