[project]
name = "segment2"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "huggingface-hub>=0.29.3",
    "torch>=2.6.0",
    "image>=1.5.33",
    "sam2>=1.1.0",
    "matplotlib>=3.10.1",
    "opencv-contrib-python>=4.11.0.86",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "opencv-python-headless>=4.11.0.86",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/segment2"]
